[gd_scene load_steps=3 format=3 uid="uid://ckvqraq6j1okh"]

[ext_resource type="Script" uid="uid://b2b3rhd3hx6q3" path="res://gui/MainMenu/MainMenu.gd" id="1_36t4u"]

[sub_resource type="FontVariation" id="FontVariation_3x6ws"]
variation_embolden = 0.5

[node name="CarSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource("1_36t4u")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -157.633
offset_top = 42.93
offset_right = 157.632
offset_bottom = 133.93
grow_horizontal = 2
theme_override_colors/font_color = Color(0.464521, 0.0415523, 0, 1)
theme_override_colors/font_shadow_color = Color(1.60982e-05, 0.00239567, 0.0441547, 0.12549)
theme_override_colors/font_outline_color = Color(0.842205, 0.882203, 0.847018, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 6
theme_override_constants/outline_size = 24
theme_override_constants/shadow_outline_size = 40
theme_override_fonts/font = SubResource("FontVariation_3x6ws")
theme_override_font_sizes/font_size = 64
text = "Driven to Evolve"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.402344
anchor_top = 0.458333
anchor_right = 0.597656
anchor_bottom = 0.541667
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
action_mode = 0
text = "Start Game"

[node name="StartButton3" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
action_mode = 0
text = "Skip Tutorial"

[node name="StartButton2" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
action_mode = 0
text = "Sandbox Mode"

[node name="Bottom" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -70.0
offset_right = 100.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="CreditsButton" type="Button" parent="Bottom"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 8
theme_override_font_sizes/font_size = 14
action_mode = 0
text = "Credits"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/StartButton3" to="." method="_on_start_button_3_pressed"]
[connection signal="pressed" from="VBoxContainer/StartButton2" to="." method="_on_start_button_2_pressed"]
[connection signal="pressed" from="Bottom/CreditsButton" to="." method="_on_credits_button_pressed"]
